Fix list handling on small screens

--- a/themes/mas/less/list.less
+++ b/themes/mas/less/list.less
@@ -70,7 +70,7 @@
 }
 
 div#markers-list-view {
-  margin: 0 0 0 50px;
+  margin: 0;
 }
 
 
@@ -135,7 +135,8 @@ span.marker-category {
 @media (max-width: @screen-sm-max){
   div#markers-list-view .col-md-8 {
     padding-right: 15px;
-    margin: 0 40px 0 20px;
+    margin: 0;
+    padding-left: 0;
   }
 }
 
